<resources>
    <string name="app_name">Правильный путь</string>
    <string name="auth_high">В приложении вы сможете:</string>
    <string name="first_text">—Просмотреть ближайшие мечети, халяльные места и заказать к ним такси</string>
    <string name="second_text">— Устанавливать цену за такси, которую считаете сраведливой</string>
    <string name="third_text">— Получать наставления и советы</string>
    <string name="start">Начать</string>
    <string name="welcome">Добро пожаловать!</string>
    <string name="welcome_first_text">Ас-саляму алейкум ва рахматуЛлахи ва баракату (мир вам) братья и сестры, правильный путь приветствует вас!</string>
    <string name="registration">Регистрация</string>
    <string name="sms">На указанный номер придет SMS-код для продолжения регистрации</string>
    <string name="_7">+7</string>
    <string name="enter_phone_number">Введите номер телефона</string>
    <string name="continuee">Продолжить</string>
    <string name="logout">Выйти из аккаунта</string>
    <string name="number_exeption">Неверный формат номера</string>
    <string name="enter_sms_code">Введите полученный SMS-код для продолжения регистрации</string>
    <string name="zero_hint">0</string>
    <string name="add_geo_data">Добавление геоданных</string>
    <string name="geo_hint">Разрешите получать геоданные для определения Вашего нахождения. Так вы сэкономите время заказа</string>
    <string name="allow">Разрешить</string>
    <string name="sms_code_exception">Введите верный код, полученный по смс</string>
    <string name="terms_of_use"><![CDATA[1. Экономьте время водителя. Сформулируйте четко цель поездки, особенности, укажите класс автомобиля.\n 2. Детей перевозить только в специальных удерживающих устройствах. Предупредите о детях до 12 лет. Родители обязаны следить за поведением детей (например, нельзя разрешать детям вставать ногами на сиденье). \n3. Предупредить о наличии багажа, количестве человек. \n4. Если перевозите животное, сообщите заблаговременно. \n5. Указывайте не только адрес, но и подъезд при заказе. \n6. Старайтесь выйти к машине после уведомления, не задерживайтесь, ставьте в известность о форс-мажорах. \n7. Содержать салон автомобиля в чистоте. \n8. Своевременность подачи. Укажите в приложении срочность поездки, вызовите машину на нужное время, услуга доступна за дополнительную плату. \n9. Доброжелательность. При посадке в такси, поздоровайтесь, назовите конечный пункт поездки. Не отвлекайте разговорами, моветон – громкие беседы по телефону, между собой. \n10. Точность и порядочность. Не испытывайте терпение, разыскивая купюры, так часто делают «трудные» пассажиры, оплачивайте поездку сразу по завершению наличными или картой. Оплата онлайн решает проблемы сдачи и отсутствия мелочи. \n11. Безопасность. Пристегивайтесь, не дожидаясь напоминания, даже если едете сзади. \n12. Комфорт и безопасность поездки в такси зависит от двух сторон: водителя и пассажира. Если они будут выполнять свои обязанности, то конфликтных ситуаций не возникнет! Комфорт и безопасность поездки в такси зависит от двух сторон: водителя и пассажира. Если они будут выполнять свои обязанности, то конфликтных ситуаций не возникнет.]]></string>
    <string name="app_rules">Правила использования приложения</string>
    <string name="back">Назад</string>
    <string name="next">Дальше</string>
    <string name="agree_terms_of_use_high">Согласие с условиями использования приложения</string>
    <string name="accept_tou">Я ознакомлен с </string>
    <string name="accept_tou_2">, принимаю их условия и выражаю свое согласие на обработку моих персональных данных</string>
    <string name="using_rules">Правилами использования</string>
    <string name="tou_accept">Я ознакомлен с Правилами использования, принимаю их условия и выражаю свое согласие на обработку моих персональных данных</string>
    <string name="tou_exception">Примите пользовательское соглашение</string>
    <string name="to_order">К заказу</string>
    <string name="wish_one">Абу Хурайра поведал, что Пророк сказал: «Верующий — это зеркало для своего брата. Верующий — это брат другому верующему. Он защищает его от потерь и охраняет его за его спиной»</string>
    <string name="wish_two">Абу Мас\'уд ал-\'Ансарй сказал: «К Пророку пришел человек и сказал: «Мой верблюд совсем выбился из сил, так дай же мне ездовое животное». Он ответил: «У меня ничего нет. Но ступай к такому-то, может быть, он даст тебе верблюда». Он пошел к тому человеку, и тот далему ездовое животное. Затем он вернулся к Пророку и рассказал ему об этом. Он сказал: «Тот, кто указывает путь к добру, получает ту же на- граду, что и человек, который делает это добро»</string>
    <string name="wish_three">Абу Хурайра поведал, что Пророк сказал: «Клянусь Тем, в Чьей руке моя душа, вы не войдете в Рай, пока не станете настоящими мусульманами. А настоящими мусульманами вы не станете до тех пор, пока не полюбите друг друга. Сердечнее приветствуйте друг друга, и вы полюбите друг друга. Остерегайтесь ненависти, ибо это бритва. Я не говорю вам, что она сбривает волосы, но она сбривает религиозность»</string>
    <string name="wish_four">Абу ад-Дарда\' поведал, что Пророк сказал: «Ничто не может быть весомее на весах, чем добрый нрав»</string>
    <string name="wish_five">Абу Са\'ид ал-Худрй поведал, что Пророк сказал: «В верующем не уживаются два качества: жадность и дурной нрав»</string>
    <string name="wish_six">Абд Аллах ибн \'Амр сказал: «Есть четыре таких качества, что, обладай вы ими, вы не потерпели бы ущерба, даже если бы  у вас отобрали весь мир. Это: добрый нрав, умеренность в еде, правдивость в словах и сбережение того, что было вверено на хранение»</string>
    <string name="wish_seven">Жабир поведал, что Посланник Аллаха сказал: «Каждый добрый поступок — это милостыня. К доброте относится то, чтобы встречать своего брата с радостным выражением лица и добавлять из своего ведра в его сосуд»</string>
    <string name="wish_eight">\'Абу Хурайра поведал, что Посланник Аллаха сказал: «Верующий бесхитростен и великодушен, тогда как порочный человек является мошенником»</string>
    <string name="wish_nine">\'Абу Хурайра поведал, что Пророк сказал: «Страшитесь несправедливости. Несправедливость предстанет в виде тьмы в день Воскресения. Страшитесь душевной черствости. Аллаху не угодны те, кто черств и злоречив. Страшитесь алчности, ибо она охватила тех, кто жил до вас, и они порвали родственные узы. Она охватила их, и они превратили в дозволенное то, что было запретным»</string>
    <string name="wish_ten">«Неприлично человеку смотреть на своего брата или следить за ним взором, когда он поворачивается спиной, или спрашивать: «Откуда ты пришел? Куда направляешься?»</string>
    <string name="wish_eleven">Мухаммад ибн ал-Ханафиййа сказал: «Глуп тот, кто неправильно ведет себя с человеком, общества которого он не может избежать, до техпор, пока Аллах не освободит его или не укажет ему выход из создавшегося положения»</string>
    <string name="current_location">Текущее местоположение</string>
    <string name="where">Куда</string>
    <string name="order_taxi">Заказать</string>
    <string name="economy_bold">Эконом</string>
    <string name="economy"> от 200 Rub</string>
    <string name="economy_full"><![CDATA[<b>Эконом</b><br>
    от 200 Rub]]></string>
    <string name="comfort_bold">Комфорт</string>
    <string name="comfort"> от 500 Rub</string>
    <string name="comfort_full"><![CDATA[<b>Комфорт</b><br>
    от 500 Rub]]></string>
    <string name="business_bold">Бизнес</string>
    <string name="business"> от 1000 Rub</string>
    <string name="business_full"><![CDATA[<b>Бизнес</b><br>
    от 999 Rub]]></string>
    <string name="describe_your_price">Укажите свою цену</string>
    <string name="your_comment">Ваш комментарий</string>
    <string name="title_activity_maps_controller">Map</string>
    <string name="suggest_price">Предложите цену за поезду в рублях</string>
    <string name="hint_dialog"><![CDATA[*Чем выше Вы укажете цену, тем выше]]></string>
    <string name="second_hint_dialog"> вероятность найти водителя </string>
    <string name="cancel">Отмена</string>
    <string name="done">Готово</string>
    <string name="сomment_to_driver">Комментарий водителю</string>
    <string name="add_your_comment">Добавьте Ваш комментарий</string>
    <string name="your_comment_hint">Ваш комментарий</string>
    <string name="title_activity_navigation_drawer_controller">NavigationDrawerController</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="user">Пользователь</string>
    <string name="_749597556983">+749597556983</string>
    <string name="settings">Настройки</string>
    <string name="help">Служба поддержки</string>
    <string name="guide">Гид</string>
    <string name="history">История заказов</string>
    <string name="auth_head">Авторизация</string>
    <string name="phone_number_hint">Номер телефона</string>
    <string name="password_head">Пароль</string>
    <string name="password_hint">Пароль</string>
    <string name="forgot_password_text">Забыли пароль?</string>
    <string name="enter">Войти</string>
    <string name="number_for_cnnection">Номер для связи</string>
    <string name="stub_number">+749597556983</string>
    <string name="call_us">Позвонить нам</string>
    <string name="stub_mail">pravilny_put@mail.ru</string>
    <string name="owner">Кому</string>
    <string name="example_mail_ru">example@mail.ru</string>
    <string name="your_email_text">Ваш email</string>
    <string name="them_text">Тема</string>
    <string name="stub_data">08 сентября 15:30</string>
    <string name="text_text">Текст</string>
    <string name="enter_message_text">Введите текст сообщения</string>
    <string name="sent_letter">Отправить письмо</string>
    <string name="authorization">Авторизация</string>
    <string name="auth_head_second">На указанный номер придет SMS-код для продолжения регистрации</string>
    <string name="ru_num_code">+7</string>
    <string name="register">Зарегистрироваться</string>
    <string name="no_account">Нет аккаунта?</string>
    <string name="error_message_no_account">Аккаунт не найден. Зарегистрируйтесь</string>
    <string name="error_message_internet_exeption">Ошибка подключения. Попробуйте еще раз</string>
    <string name="error_message_empty_number">Введите номер телефона</string>
    <string name="error_message_invalid_number">Номер введен не верно</string>
    <string name="skip">Пропустить</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="driver_auth_intro">Для получени заказов необходимо \n пройти регистрацию водителя онлайн</string>
    <string name="driver_auth_document_text">Для этого Вам понадобятся 5 минут времени и следующие документы:</string>
    <string name="driver_auth_document_list">— ваша фотография\n— фотография машины\n— свидетельство о регистрации ТС\n— водительское удостверение</string>
    <string name="come_later">Пройти позже</string>
    <string name="my_income">Мои доходы</string>
    <string name="order_history">История заказов</string>
    <string name="my_profile">Мой профиль</string>
    <string name="support_service">Служба поддержки</string>
    <string name="online_registration">Онлайн-регистрация</string>
    <string name="become_passenger">Стать пассажиром</string>
</resources>