<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/dialog_head_comment"
        android:layout_marginTop="24dp"
        android:layout_width="wrap_content"
        android:textAlignment="center"
        android:layout_marginStart="70dp"
        android:layout_marginEnd="70dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/add_your_comment"
        android:textColor="@android:color/black"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/comment_edit_text"
        android:layout_width="280dp"
        android:layout_height="103dp"
        android:layout_marginTop="@dimen/default_margin"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:layout_below="@id/dialog_head_comment"
        android:background="@drawable/background_set_price"
        android:hint="@string/your_comment_hint"
        android:textSize="14sp"
        android:gravity="left"
        android:padding="8dp"
        />

    <LinearLayout
        android:id="@+id/buttons"
        android:layout_below="@id/comment_edit_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="24dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/cancel_btn_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            android:textStyle="bold"
            android:layout_marginEnd="93dp"
            android:textColor="@android:color/black"
            />


        <TextView
            android:id="@+id/ok_btn_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/done"
            android:textStyle="bold"
            android:textColor="@color/colorThemeGreen"
            />
    </LinearLayout>

</RelativeLayout>