<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/transparent">

    <RelativeLayout
        android:id="@+id/call_us_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/fragment_main_back"
        android:elevation="6dp">

        <RelativeLayout
            android:id="@+id/number_for_connection_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="18dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@string/number_for_cnnection"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="24dp"
                android:text="@string/stub_number" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/enter_button"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_below="@id/number_for_connection_layout"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="24dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="24dp"
            android:layout_marginBottom="32dp"
            android:background="@drawable/arrow_stroke_bg">

            <TextView
                android:id="@+id/main_btn_text"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="1dp"
                android:layout_marginTop="2dp"
                android:layout_marginBottom="2dp"
                android:background="@drawable/arrow_overlay"
                android:paddingStart="20dp"
                android:paddingTop="10dp"
                android:paddingBottom="8dp"
                android:text="@string/call_us"
                android:textAppearance="@style/start"
                android:textStyle="bold"
                tools:ignore="RtlSymmetry" />

            <ImageView
                android:layout_width="72dp"
                android:layout_height="48dp"
                android:layout_alignParentEnd="true"
                android:background="@drawable/arrow_bg"
                android:padding="4dp"
                android:src="@drawable/arrow_forward_black_24dp" />
        </RelativeLayout>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/create_letter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/call_us_view"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/fragment_main_back"
        android:elevation="6dp">

        <LinearLayout
            android:id="@+id/owner_mail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="18dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@string/owner"
                android:textColor="@android:color/black" />

            <TextView
                android:id="@+id/mail_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="44dp"
                android:layout_marginEnd="24dp"
                android:text="@string/stub_mail"
                android:textColor="@android:color/black" />
        </LinearLayout>


        <LinearLayout
            android:id="@+id/your_email_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/owner_mail"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="18dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/your_email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@string/your_email_text"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/email_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:layout_marginEnd="24dp"
                android:hint="@string/example_mail_ru"
                android:singleLine="true"
                android:textSize="14sp" />
        </LinearLayout>


        <LinearLayout
            android:id="@+id/theme_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/your_email_layout"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="18dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/theme"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@string/them_text"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/theme_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="44dp"
                android:layout_marginEnd="24dp"
                android:text="@string/stub_data"
                android:textSize="14sp" />
        </LinearLayout>


        <LinearLayout
            android:id="@+id/text_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/theme_layout"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="18dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@string/text_text"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/text_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="38dp"
                android:layout_marginEnd="24dp"
                android:singleLine="true"
                android:hint="@string/enter_message_text"
                android:textSize="14sp" />
        </LinearLayout>

        <RelativeLayout
            android:id="@+id/sent_letter_button"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_below="@id/text_layout"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="24dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="24dp"
            android:layout_marginBottom="32dp"
            android:background="@drawable/arrow_stroke_bg">

            <TextView
                android:id="@+id/mail_text_btn"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="1dp"
                android:layout_marginTop="2dp"
                android:layout_marginBottom="2dp"
                android:background="@drawable/arrow_overlay"
                android:paddingStart="20dp"
                android:paddingTop="10dp"
                android:paddingBottom="8dp"
                android:text="@string/sent_letter"
                android:textAppearance="@style/start"
                android:textStyle="bold"
                tools:ignore="RtlSymmetry" />

            <ImageView
                android:layout_width="72dp"
                android:layout_height="48dp"
                android:layout_alignParentEnd="true"
                android:background="@drawable/arrow_bg"
                android:padding="4dp"
                android:src="@drawable/arrow_forward_black_24dp" />
        </RelativeLayout>


    </RelativeLayout>

</RelativeLayout>